# vector

./: CMakeLists.txt  LICENSE
dep/glad/: CMakeLists.txt
src/: cam.h  glfw.c  render_wire.c  scene_hexagons.c  scene_simple.c  shader.c  shader.h  types.h  vbo.c  vbo.h  vector.c  vector.h
src/int/: glfw_i.h  render_i.h  scene_i.h
test/: test_01.c
